[package]
name = "pit-go-generic"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Generic PIT bindings"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

pit-core.workspace = true
portal-solutions-sdk = {workspace=true,optional = true}
[features]
unstable-sdk=["dep:portal-solutions-sdk"]