[package]
name = "pit-rust-generic"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Generic PIT bindings"

[dependencies]
hex = "0.4.3"


pit-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
portal-solutions-sdk = {workspace=true,optional = true}
[features]
unstable-sdk=["dep:portal-solutions-sdk"]
unstable-pcode=["pit-core/unstable-pcode"]
unstable-sdkcode=["unstable-sdk","unstable-pcode","portal-solutions-sdk/unstable-sdkcode"]
unstable-generics=["pit-core/unstable-generics"]