[package]
name = "pit-to-capnp"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
pit-core.workspace = true
sha3 = { version = "0.10.8", default-features = false }
portal-solutions-sdk = {workspace=true,optional = true}
[features]
unstable-sdk=["dep:portal-solutions-sdk"]
unstable-pcode=["pit-core/unstable-pcode"]
unstable-sdkcode=["unstable-sdk","unstable-pcode","portal-solutions-sdk/unstable-sdkcode"]
unstable-generics=["pit-core/unstable-generics"]