[package]
name = "pit-wit-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]

nom = { version = "8", default-features = false, features = ["alloc"] }
pit-core.workspace = true

portal-solutions-sdk = {workspace=true,optional = true}
[features]
unstable-sdk=["dep:portal-solutions-sdk"]
unstable-pcode=["pit-core/unstable-pcode"]
unstable-sdkcode=["unstable-sdk","unstable-pcode","portal-solutions-sdk/unstable-sdkcode"]
unstable-generics=["pit-core/unstable-generics"]